--- a/LeagueAssistWeb/Views/About/Edit.cshtml
+++ b/LeagueAssistWeb/Views/About/Edit.cshtml
@@ -8,96 +8,96 @@
 <hr />
 <br />
 
-<div class="row">
-    <div class="col-sm-12">
-        <div class="panel panel-default">
-            <div class="col-sm-12 panel-heading clearfix">
-                <span class="col-sm-6"><b>Podaci o klubu</b></span>
-                <span class="col-sm-6 text-right">
-                </span>
-            </div>
+@using (Html.BeginForm("Edit", "About", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="panel panel-default">
+                <div class="col-sm-12 panel-heading clearfix">
+                    <span class="col-sm-6"><b>Podaci o klubu</b></span>
+                    <span class="col-sm-6 text-right">
+                    </span>
+                </div>
 
-            <div class="panel-body">
-                <div class="col-md-12">
-                    <table class="table table-borderless" style="border-top: none">
-                        <tr>
-                            <td align="right" class="col-xs-2" style="border-top: none"><b>Naziv kluba:</b></td>
-                            <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                            </td>
-                            <td align="left" class="col-xs-8" style="border-top: none"></td>
-                        </tr>
-                        <tr>
-                            <td align="right" class="col-xs-2" style="border-top: none"><b>Grad:</b></td>
-                            <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.DropDownList("gradID", null, htmlAttributes: new { @class = "form-control" })
-                            </td>
-                            <td align="left" class="col-xs-8" style="border-top: none"></td>
-                        </tr>
-                        <tr>
-                            <td style="border-top:none" />
-                        </tr>
-                    </table>
+                <div class="panel-body">
+                    <div class="col-md-12">
+                        <table class="table table-borderless" style="border-top: none">
+                            <tr>
+                                <td align="right" class="col-xs-2" style="border-top: none"><b>Naziv kluba:</b></td>
+                                <td align="left" class="col-xs-2" style="border-top: none">
+                                    @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+                                </td>
+                                <td align="left" class="col-xs-8" style="border-top: none"></td>
+                            </tr>
+                            <tr>
+                                <td align="right" class="col-xs-2" style="border-top: none"><b>Grad:</b></td>
+                                <td align="left" class="col-xs-2" style="border-top: none">
+                                    @Html.DropDownList("gradID", null, htmlAttributes: new { @class = "form-control" })
+                                </td>
+                                <td align="left" class="col-xs-8" style="border-top: none"></td>
+                            </tr>
+                            <tr>
+                                <td style="border-top:none" />
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<hr />
-<br />
+    <hr />
+    <br />
 
-<div class="row">
-    <div class="col-sm-12">
-        <div class="panel panel-default">
-            <div class="col-sm-12 panel-heading clearfix">
-                <span class="col-sm-6"><b>Podaci o stadionu</b></span>
-                <span class="col-sm-6 text-right">
-                </span>
-            </div>
-            <div class="panel-body">
-                <div class="col-md-12">
-                    <table class="table table-borderless" style="border-top: none">
-                        <tr>
-                            <td align="right" class="col-xs-2" style="border-top: none"><b>Naziv stadiona:</b></td>
-                            <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.stadium.name, new { htmlAttributes = new { @class = "form-control" } })
-                            </td>
-                            <td align="right" class="col-xs-2" style="border-top: none"><b>Kapacitet:</b></td>
-                            <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.stadium.capacity, new { htmlAttributes = new { @class = "form-control" } })
-                            </td>
-                            <td align="left" class="col-xs-4" style="border-top: none"></td>
-                        </tr>
-                        <tr>
-                            <td align="right" class="col-xs-2" style="border-top: none"><b>Adresa:</b></td>
-                            <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.EditorFor(model => model.stadium.address, new { htmlAttributes = new { @class = "form-control" } })
-                            </td>
-                            <td align="right" class="col-xs-2" style="border-top: none"><b>Grad:</b></td>
-                            <td align="left" class="col-xs-2" style="border-top: none">
-                                @Html.DropDownList("stadiumGradID", null, htmlAttributes: new { @class = "form-control" })
-                            </td>
-                            <td align="left" class="col-xs-4" style="border-top: none"></td>
-                        </tr>
-                        <tr>
-                            <td style="border-top:none" />
-                        </tr>
-                    </table>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="panel panel-default">
+                <div class="col-sm-12 panel-heading clearfix">
+                    <span class="col-sm-6"><b>Podaci o stadionu</b></span>
+                    <span class="col-sm-6 text-right">
+                    </span>
+                </div>
+                <div class="panel-body">
+                    <div class="col-md-12">
+                        <table class="table table-borderless" style="border-top: none">
+                            <tr>
+                                <td align="right" class="col-xs-2" style="border-top: none"><b>Naziv stadiona:</b></td>
+                                <td align="left" class="col-xs-2" style="border-top: none">
+                                    @Html.EditorFor(model => model.stadium.name, new { htmlAttributes = new { @class = "form-control" } })
+                                </td>
+                                <td align="right" class="col-xs-2" style="border-top: none"><b>Kapacitet:</b></td>
+                                <td align="left" class="col-xs-2" style="border-top: none">
+                                    @Html.EditorFor(model => model.stadium.capacity, new { htmlAttributes = new { @class = "form-control" } })
+                                </td>
+                                <td align="left" class="col-xs-4" style="border-top: none"></td>
+                            </tr>
+                            <tr>
+                                <td align="right" class="col-xs-2" style="border-top: none"><b>Adresa:</b></td>
+                                <td align="left" class="col-xs-2" style="border-top: none">
+                                    @Html.EditorFor(model => model.stadium.address, new { htmlAttributes = new { @class = "form-control" } })
+                                </td>
+                                <td align="right" class="col-xs-2" style="border-top: none"><b>Grad:</b></td>
+                                <td align="left" class="col-xs-2" style="border-top: none">
+                                    @Html.DropDownList("stadiumGradID", null, htmlAttributes: new { @class = "form-control" })
+                                </td>
+                                <td align="left" class="col-xs-4" style="border-top: none"></td>
+                            </tr>
+                            <tr>
+                                <td style="border-top:none" />
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<br />
-<p>
-    <div class="form-group">
-        <div class="col-xs-12" align="right">
-            <a href="@Url.Action("Edit")" class="btn btn-success">
-                <span class="glyphicon glyphicon-floppy-save"></span>
-                Spremi
-            </a>
+    <br />
+    <p>
+        <div class="form-group">
+            <div class="col-xs-12" align="right">
+                <input type="submit" value="Spremi" class="btn btn-success" />
+            </div>
         </div>
-    </div>
-</p>
-<br />
+    </p>
+    <br />
+}
