--- a/LeagueAssistWeb/Views/Account/Login.cshtml
+++ b/LeagueAssistWeb/Views/Account/Login.cshtml
@@ -15,11 +15,11 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    <!--@Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })-->
+                    <!--@Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })-->
                     <label class="col-md-2 control-label">Username</label>
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
@@ -43,13 +43,6 @@
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
             }
         </section>
     </div>
